--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "scripts": {
     "clean": "rm -rf build",
-    "build": "tsc && npm i --package-lock-only && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "watch": "npm run build && tsc --watch",
-    "inspector": "npx @modelcontextprotocol/inspector node build/index.js",
+    "inspector": "npx @modelcontextprotocol/inspector bun src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
+    "playwright": "^1.51.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
