--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
+    "@mozilla/readability": "^0.6.0",
+    "jsdom": "^26.0.0",
     "playwright": "^1.51.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.1",
